# rig

./: AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  schema.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
examples/: bootstrap.jsonc  cond-demo.jsonc  cross-platform.jsonc  dag-pipeline.jsonc  dev-env.jsonc  kitchen-sink.jsonc  nested-vars.jsonc  parallel.jsonc  python-project.jsonc  vars-demo.jsonc
examples/multi-platform/: linux.jsonc  macos.jsonc  manifest.jsonc  windows.jsonc
examples/python-project/: manifest.jsonc
examples/python-project/{{name}}/: pyproject.toml
examples/python-project/{{name}}/.github/workflows/: ci.yml
examples/python-project/{{name}}/src/{{package}}/: __main__.py  cli.py
examples/python-project/{{name}}/tests/: test_cli.py
src/: bundle.rs  config.rs  executor.rs  inspect.rs  main.rs  path.rs  style.rs  vars.rs
tests/: cli_bundle.rs  cli_exec.rs  cli_graph.rs  cli_output.rs  cli_schema.rs
tests/fixtures/: schema-coverage.json
