[package]
name = "rig"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
json_comments = "0.2.2"
chrono = "0.4.41"
ureq = "3.0.11"
rpassword = "7.5"
aml = { git = "https://github.com/BilakshanP/aml.git" }

[dev-dependencies]
tempfile = "3.15.0"
