[package]
name = "rig"
version = "0.4.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
json_comments = "0.2.2"
chrono = "0.4.41"
ureq = "3.0.11"
rpassword = "7.5"
aml = { git = "https://github.com/BilakshanP/aml.git" }
tar = "0.4"
flate2 = "1.0"
tempfile = "3.15"
globset = "0.4"
dirs = "6"

[dev-dependencies]
strip-ansi-escapes = "0.2"
