[package]
name = "rig"
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
aml = { git = "https://github.com/BilakshanP/aml", tag = "v0.1.1" }
chrono = "0.4.41"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6"
flate2 = "1.0"
globset = "0.4"
json_comments = "0.2.2"
rpassword = "7.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4"
tempfile = "3.15"
ureq = "3.0.11"

[dev-dependencies]
strip-ansi-escapes = "0.2"
