[project]
name = "{{name}}"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = []

[project.scripts]
{{name}} = "{{package}}.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{package}}"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.2",
    "ruff>=0.15.11",
]
